[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/room_shell.gd" type="Script" id=1]
[ext_resource path="res://img/prototype-living-room.png" type="Texture" id=2]
[ext_resource path="res://src/clickable.gd" type="Script" id=3]
[ext_resource path="res://img/living-room/test.png" type="Texture" id=4]
[ext_resource path="res://src/Door.gd" type="Script" id=5]
[ext_resource path="res://img/temp_arrow.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100.176, 199.214 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104.332, 275.553 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
room_width = 3000

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1500, 300 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1934.38, 270 )
script = ExtResource( 3 )
dialog_text = "This thing |!does not |! |belong here."

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Left_Door" type="Area2D" parent="."]
position = Vector2( 61.797, 275 )
script = ExtResource( 5 )
to_room = "test2"

[node name="Arrow" type="Sprite" parent="Left_Door"]
visible = false
position = Vector2( 14.1015, 14.1015 )
scale = Vector2( 0.858985, 0.858985 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Door"]
shape = SubResource( 2 )
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Left_Door" to="Left_Door" method="_on_Door_input_event"]
[connection signal="mouse_entered" from="Left_Door" to="Left_Door" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="Left_Door" to="Left_Door" method="_on_Door_mouse_exited"]
